Integration test spec proves outputDirectory value is not being honoured when changed using dsl.